activerecord first or create does not work

--- a/qa-worktest.html
+++ b/qa-worktest.html
@@ -276,7 +276,7 @@
         // 1. Create QA
         $body.on('submit', '#createQa', function(evt) {
           evt.preventDefault();
-          var path = '/qa',
+          var path = '/qas',
               method = 'POST',
               params = $(this).serializeArray();
 
