--- a/qa-worktest.html
+++ b/qa-worktest.html
@@ -287,7 +287,7 @@
         $body.on('submit', '#getQa', function(evt) {
           evt.preventDefault();
           var qa_id = $(this).find('input[name="qa_id"]').val(),
-              path = '/qa/'+qa_id,
+              path = '/qas/'+qa_id,
               method = 'GET';
 
           req.call(this, path, method).done(handleSuccess).fail(handleError);
