Successfully create question and save it to the database.

--- a/qa-worktest.html
+++ b/qa-worktest.html
@@ -141,8 +141,8 @@
         <fieldset class="inline-block">
           <legend>3. Ask a question</legend>
           <input name="qa_id" placeholder="qa_id">
-          <input name="text" placeholder="text">
-          <input name="name" placeholder="asked_by_name">
+          <input name="conent" placeholder="content">
+          <input name="name" placeholder="name">
           <button id="ask-question" type="submit" class="btn btn-primary">POST</button>
         </fieldset>
         <div class="inline-block status hidden"></div>
